--- a/src/app/modules/newsfeed/activity/modal/modal.component.html
+++ b/src/app/modules/newsfeed/activity/modal/modal.component.html
@@ -92,6 +92,8 @@
       <!-- -------------------------------------------------- -->
       <div class="m-activityModal__contentContainer">
         <div class="m-activityModal__contentBody">
+          <m-ngbAutofocus-capture></m-ngbAutofocus-capture>
+
           <!-- OWNER BLOCK -->
           <m-activity__ownerBlock>
             <ng-container class="m-activityOwnerBlock__right">
