--- a/src/app/modules/onboarding-v3/panel/verify-uniqueness/verify-uniqueness.component.html
+++ b/src/app/modules/onboarding-v3/panel/verify-uniqueness/verify-uniqueness.component.html
@@ -1,3 +1,4 @@
+<m-ngbAutofocus-capture></m-ngbAutofocus-capture>
 <span
   class="m-onboardingUniqueness__headerSpan"
   i18n="@@ONBOARDING_VERIFY_UNIQUENESS__HEADING"
@@ -13,6 +14,7 @@
   <div
     class="m-onboardingUniqueness__optionContainer m-onboardingUniqueness__phoneContainer"
     (click)="optionClicked('VerifyPhoneStep')"
+    tabindex="0"
   >
     <i class="material-icons m-onboardingUniqueness__optionIcon">phone</i>
     <span
