--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/bridge-transfer/network-bridge-transfer.ng.scss
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/bridge-transfer/network-bridge-transfer.ng.scss
@@ -16,6 +16,8 @@
   .m-modalV2__inner {
     padding: 40px;
     position: relative;
+    height: 100%;
+    box-sizing: border-box;
 
     .m-networkSwapBridge--close {
       position: absolute;
