confirmation & pending (3 steps) modals

--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/approval-dialog/approval-dialog.component.html
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/approval-dialog/approval-dialog.component.html
@@ -11,7 +11,7 @@
     continue you need to approve the transfer. Alternativley you may approve
     max, so you may skip this step in the future.
   </span>
-  <m-button color="blue">
+  <m-button color="blue" (click)="navigate()">
     <ng-container i18n="verb|@@M__ACTION__CANCEL"
       >Approve 100 MINDS</ng-container
     >
