--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/confirm-dialog/confirm-dialog.component.html
@@ -1,3 +1,36 @@
-<div>
-  Test
+<div class="m-networkConfirmation-container">
+  <span class="m-networkConfirmation-title">
+    Confirm Transfer
+  </span>
+  <span class="m-networkConfirmation-subtitle">
+    100 MINDS
+  </span>
+
+  <div class="mdl-grid m-networkConfirmation-process">
+    <div class="mdl-cell m-networkConfirmation-box">
+      Goerli
+    </div>
+    <div
+      class="mdl-cell mdl-cell--1-col m-networkConfirmation-chevron__container"
+    >
+      <i class="material-icons m-networkApproval-info">chevron_right</i>
+      <i class="material-icons m-networkApproval-info">chevron_right</i>
+      <i class="material-icons m-networkApproval-info">chevron_right</i>
+    </div>
+    <div class="mdl-cell m-networkConfirmation-box">
+      Mumbai
+    </div>
+  </div>
+
+  <div class="mdl-grid m-networkConfirmation-footer">
+    <span>Estimated transaction fee ~$0.40 - Transfer time ~8 mins</span>
+  </div>
+
+  <div class="m-networkConfirmation-button_container">
+    <m-button color="blue" (click)="navigate()">
+      <ng-container i18n="verb|@@M__ACTION__CANCEL"
+        >Confirm Transfer</ng-container
+      >
+    </m-button>
+  </div>
 </div>
