--- a/src/app/common/components/rich-embed/rich-embed.ng.scss
+++ b/src/app/common/components/rich-embed/rich-embed.ng.scss
@@ -1,6 +1,24 @@
 @import 'defaults.scss';
 
 :host {
+  // ******************************************************
+  // ** MINIMAL MODE **
+  // ******************************************************
+
+  .m-activity__content--minimalMode & {
+    .m-rich-embed-src {
+      border: none !important;
+    }
+  }
+
+  // ******************************************************
+  // ******************************************************
+  // ******************************************************
+  // ** DEFAULT **
+  // ******************************************************
+  // ******************************************************
+  // ******************************************************
+
   &[class*='m-richEmbed--activityV2'] {
     .m-rich-embed-src {
       @include border;
