--- a/src/app/modules/newsfeed/activity-v2/modal/modal.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/modal/modal.component.ng.scss
@@ -1,5 +1,8 @@
 @import 'defaults.scss';
+@import '../shared.scss';
+
 $modal-padding: 20px;
+$modal-padding: $modalScrollableContainerSpacing; //ojm
 
 %desc-text {
   @include body2Regular;
