--- a/src/app/modules/newsfeed/activity-v2/quote/quote.component.html
+++ b/src/app/modules/newsfeed/activity-v2/quote/quote.component.html
@@ -1,5 +1,11 @@
 <ng-container *ngIf="service.entity$ | async as entity$">
-  <div class="m-activity__leftColumn m-activity__avatar">
+  <div
+    *ngIf="
+      !service.displayOptions.minimalMode &&
+      !service.displayOptions.isSidebarBoost
+    "
+    class="m-activity__leftColumn m-activity__avatar"
+  >
     <m-hovercard [publisher]="remindObj.ownerObj" [offset]="[0, 15]">
       <a [routerLink]="['/', remindObj.ownerObj.username]">
         <img [src]="avatarUrl" />
@@ -7,10 +13,11 @@
     </m-hovercard>
   </div>
   <div class="m-activity__rightColumn">
-    <m-activityV2__ownerBlock> </m-activityV2__ownerBlock>
+    <m-activityV2__ownerBlock></m-activityV2__ownerBlock>
     <m-activityV2__content
       *ngIf="service.shouldShowContent$ | async"
       [autoplayVideo]="autoplayVideo"
+      [isReminded]="true"
     ></m-activityV2__content>
   </div>
 </ng-container>
