Revert unneeded change

--- a/src/app/modules/boost/modal/tabs/boost-modal-tabs.component.html
+++ b/src/app/modules/boost/modal/tabs/boost-modal-tabs.component.html
@@ -87,7 +87,7 @@
             *ngSwitchCase="'newsfeed'"
             i18n="@@BOOST_MODAL__CONTENT_WILL_APPEAR_ACROSS_SITE"
           >
-            Your content will appear in newsfeeds across the site.
+            Your content will appear in on newsfeeds across the site.
           </p>
           <ng-container *ngSwitchCase="'offer'">
             <p i18n="@@BOOST_MODAL__">
