--- a/src/app/modules/newsfeed/feeds/top-highlights/top-highlights.component.html
+++ b/src/app/modules/newsfeed/feeds/top-highlights/top-highlights.component.html
@@ -25,6 +25,7 @@
       i18n="@@MINDS__NEWSFEED__TOP_FEED__SHOW_MORE"
       class="m-topHighlights__showMore__link"
       (click)="onSeeMore.emit()"
+      data-ref="top-feed-highlights-more"
       >See more top posts</a
     >
   </footer>
