update api resource

--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -24,9 +24,9 @@
       [algorithm]="algorithm"
     ></m-feedHeader>
 
-    <m-channelRecommendation
+    <m-channelRecommendation2
       location="newsfeed"
-    ></m-channelRecommendation>
+    ></m-channelRecommendation2>
 
     <div class="minds-list" m-hotkeyScroll [anchors]="feedViewChildren">
       <ng-container *ngIf="algorithm === 'latest'">
