--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -24,9 +24,7 @@
       [algorithm]="algorithm"
     ></m-feedHeader>
 
-    <m-channelRecommendation2
-      location="newsfeed"
-    ></m-channelRecommendation2>
+    <m-channelRecommendation location="newsfeed"></m-channelRecommendation>
 
     <div class="minds-list" m-hotkeyScroll [anchors]="feedViewChildren">
       <ng-container *ngIf="algorithm === 'latest'">
